--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "cheerio": "^1.0.0-rc.12",
     "dotenv": "^16.1.3",
+    "node-schedule": "^2.1.1",
     "request": "^2.88.2",
     "request-promise": "^4.2.6",
     "simple-node-logger": "^21.8.12"
