--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "node-schedule": "^2.1.1",
     "request": "^2.88.2",
     "request-promise": "^4.2.6",
-    "simple-node-logger": "^21.8.12"
+    "simple-node-logger": "^21.8.12",
+    "sqlite3": "^5.1.6"
   }
 }
